crates/cli/tests/snapshots/snapshots__list_changes_one.snap
---
source: crates/cli/tests/snapshots.rs
expression: "serde_json::to_string_pretty(&env).unwrap()"
---
{
  "data": {
    "changes": [
      {
        "changeId": "<changeId>",
        "createdAt": "<createdAt>",
        "name": "billing-system",
        "schemaId": "spec-driven",
        "state": "proposing",
        "updatedAt": "<updatedAt>",
        "version": 1
      }
    ]
  },
  "ok": true,
  "requestId": "00000000-0000-4000-8000-000000000000",
  "warnings": []
}
