crates/cli/tests/snapshots/snapshots__list_specs_two_caps.snap
---
source: crates/cli/tests/snapshots.rs
expression: "serde_json::to_string_pretty(&env).unwrap()"
---
{
  "data": {
    "capabilities": [
      "rate-limiting",
      "user-auth"
    ],
    "change": "foo"
  },
  "ok": true,
  "requestId": "00000000-0000-4000-8000-000000000000",
  "warnings": []
}
