crates/cli/tests/snapshots/snapshots__new_change_duplicate_error.snap
---
source: crates/cli/tests/snapshots.rs
expression: "serde_json::to_string_pretty(&env).unwrap()"
---
{
  "error": {
    "code": "change.duplicate_name",
    "hint": "Pick a different name or delete the existing change first.",
    "message": "change name `foo` already exists",
    "retry_after_ms": null,
    "retryable": false
  },
  "ok": false,
  "requestId": "00000000-0000-4000-8000-000000000000"
}
