crates/cli/tests/snapshots/snapshots__new_change_success.snap
---
source: crates/cli/tests/snapshots.rs
expression: "serde_json::to_string_pretty(&env).unwrap()"
---
{
  "data": {
    "artifactDir": ".speclink/changes/billing-system",
    "changeId": "<changeId>",
    "createdAt": "<createdAt>",
    "name": "billing-system",
    "schemaId": "spec-driven",
    "state": "proposing",
    "version": 1
  },
  "ok": true,
  "requestId": "00000000-0000-4000-8000-000000000000",
  "warnings": []
}
