crates/cli/tests/snapshots/snapshots__show_change_empty.snap
---
source: crates/cli/tests/snapshots.rs
expression: "serde_json::to_string_pretty(&env).unwrap()"
---
{
  "data": {
    "all_tasks_done": false,
    "artifacts": [],
    "change": {
      "changeId": "<changeId>",
      "createdAt": "<createdAt>",
      "name": "billing-system",
      "schemaId": "spec-driven",
      "state": "proposing",
      "updatedAt": "<updatedAt>",
      "version": 1
    },
    "next_actions": [
      "artifact.write proposal",
      "artifact.write design",
      "artifact.write tasks"
    ]
  },
  "ok": true,
  "requestId": "00000000-0000-4000-8000-000000000000",
  "warnings": []
}
