crates/cli/tests/snapshots/snapshots__show_change_not_found_error.snap
---
source: crates/cli/tests/snapshots.rs
expression: "serde_json::to_string_pretty(&env).unwrap()"
---
{
  "error": {
    "code": "change.not_found",
    "hint": "Verify the change name via `speclink list --changes`.",
    "message": "change `missing` not found in state.db",
    "retry_after_ms": null,
    "retryable": false
  },
  "ok": false,
  "requestId": "00000000-0000-4000-8000-000000000000"
}
